--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "gosling-theme",
   "version": "0.0.1",
   "description": "Styling Gosling Visualizations Using Theme",
-  "main": "dist/index.js",
-  "unpkg": "dist/index.min.js", 
+  "main": "dist/gosling-theme.js",
+  "unpkg": "dist/gosling-theme.min.js", 
+  "module": "dist/gosling-theme.module.js",
   "repository": "https://github.com/gosling-lang/gosling-theme",
   "license": "MIT",
   "scripts": {
