--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "browser-sync": "^2.27.4",
     "concurrently": "^6.2.0",
     "gh-pages": "^3.2.3",
+    "gosling.js": "^0.8.10",
     "rollup": "^2.52.7",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "~4.1.2"
   },
-  "dependencies": {
-    "gosling.js": "0.8.7"
-  }
+  "dependencies": {}
 }
