--- a/package.json
+++ b/package.json
@@ -2,28 +2,21 @@
   "name": "gosling-theme",
   "version": "0.0.7",
   "description": "Styling Gosling Visualizations Using Theme",
-  "main": "dist/gosling-theme.js",
-  "unpkg": "dist/gosling-theme.min.js",
-  "module": "dist/gosling-theme.module.js",
-  "types": "build/gosling-theme.module.d.ts",
+  "main": "dist/gosling-theme.umd.js",
+  "unpkg": "dist/gosling-theme.umd.js",
+  "module": "dist/gosling-theme.es.js",
+  "types": "dist/types/index.d.ts",
   "repository": "https://github.com/gosling-lang/gosling-theme",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c",
-    "serve": "browser-sync start -s -f build demo --serveStatic demo",
-    "start": "yarn build && concurrently --kill-others -n Server,Rollup 'yarn serve' 'rollup -c -w'"
+    "dev": "vite",
+    "build": "vite build && tsc"
   },
   "devDependencies": {
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@wessberg/rollup-plugin-ts": "^1.3.14",
-    "browser-sync": "^2.27.4",
-    "concurrently": "^6.2.0",
     "gh-pages": "^3.2.3",
     "gosling.js": "^0.8.10",
-    "rollup": "^2.52.7",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "~4.1.2"
+    "typescript": "^4.3.5",
+    "vite": "^2.4.4"
   },
   "dependencies": {}
 }
