--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
-    "gosling.js": "^0.8.10",
+    "gosling.js": "0.9.1",
     "typescript": "^4.3.5",
     "vite": "^2.4.4"
   },
